--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
+
+
 {
+  "scripts": {
+    "start": "node ./api/server.js"
+}
+,
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
